# ./modules/CMakeLists.txt

add_subdirectory(C_ClockwiseSpiral)
add_subdirectory(C_MemorySegmentation)
add_subdirectory(CppTypeAlias)
add_subdirectory(Cpp_Callable)
add_subdirectory(Cpp_SmartPtrs)
add_subdirectory(Cpp_namespace)
add_subdirectory(DynamicStaticLib)
add_subdirectory(MoveSemantic)
add_subdirectory(Cpp_OOP)